packages/svelte/tests/compiler-errors/samples/runes-props-illegal-name-1/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'props_illegal_name',
		message:
			'Declaring or accessing a prop starting with `$$` is illegal (they are reserved for Svelte internals)'
	}
});
